// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContainer should match snapshot when error is FALSE 1`] = `
<div
  class="w-full flex flex-1 flex-row items-center justify-end md:mt-16"
  data-testid="button-container"
>
  <div
    class="text-sm absolute bottom-20 left-8 right-8 w-100 flex flex-1 justify-center text-green-500 md:relative md:bottom-0 md:right-0 md:left-0 md:mr-8 md:justify-end"
  >
    Resultado enviado com sucesso!
  </div>
  <div
    class="flex justify-end"
  />
</div>
`;

exports[`ButtonContainer should match snapshot when error is true 1`] = `
<div
  class="w-full flex flex-1 flex-row items-center justify-end md:mt-16"
  data-testid="button-container"
>
  <div
    class="text-sm absolute bottom-20 left-8 right-8 w-100 flex flex-1 justify-center text-red-500 md:relative md:bottom-0 md:right-0 md:left-0 md:mr-8 md:justify-end"
  >
    Falha ao enviar resultado. Tente novamente.
  </div>
  <div
    class="flex justify-end"
  />
</div>
`;
